# chromium_patches

./: 0001-enable-dubious-Do-Not-Track-feature-by-default.patch  0002-disable-navigation-error-correction-by-default.patch  0003-disable-contextual-search-by-default.patch  0004-disable-network-prediction-by-default.patch  0005-disable-metrics-by-default.patch  0006-disable-hyperlink-auditing-by-default.patch  0007-disable-autofill-by-default.patch  0008-disable-first-run-welcome-page.patch  0009-disable-data-reduction-proxy-promotions.patch  0009-disable-showing-popular-sites.patch  0010-disable-article-suggestions-feature-by-default.patch  0010-disable-showing-popular-sites.patch  0011-always-use-the-WebView-sandbox.patch  0011-disable-article-suggestions-feature-by-default.patch  0012-always-use-the-WebView-sandbox.patch  0012-use-64-bit-WebView-processes.patch  0013-mark-non-secure-origins-as-non-secure.patch  0013-use-64-bit-WebView-processes.patch  0014-mark-non-secure-origins-as-non-secure.patch  0014-remove-mremap-from-the-system-call-whitelist.patch  0014-use-64-bit-Monochrome-processes.patch  0015-mark-non-secure-origins-as-non-secure.patch  0015-remove-mremap-from-the-system-call-whitelist.patch  0015-switch-to-fstack-protector-strong.patch  0016-enable-fwrapv-in-non-UBSan-builds-for-clang.patch  0016-remove-mremap-from-the-system-call-whitelist.patch  0016-switch-to-fstack-protector-strong.patch  0017-add-DuckDuckGo-as-the-default-search-engine.patch  0017-enable-fwrapv-in-non-UBSan-builds-for-clang.patch  0017-switch-to-fstack-protector-strong.patch  (+21 more)
