# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os = "android"
target_cpu = "arm64"

android_channel = "stable"
android_default_version_name = "75.0.3770.87"
android_default_version_code = "377008752"

is_component_build = false
is_debug = false
is_official_build = true
symbol_level = 0
fieldtrial_testing_like_official_build = true
enable_resource_whitelist_generation = false

ffmpeg_branding = "Chrome"
proprietary_codecs = true
